--- a/profiler/conf/taxfix/config.yml
+++ b/profiler/conf/taxfix/config.yml
@@ -1,9 +1,10 @@
 graphName: "taxfix"
 schema: "taxfix_schema.gql"
-queries: "queries_all.yml"
 repeatsPerQuery: 1
 
-commitQueries: true
+queries: "queries.yml"
+deleteInsertedConcepts: false
+
 concurrency:
   clients: 2
   uniqueKeyspaces: true
