--- a/profiler/conf/road_network/concurrent_road_config.yml
+++ b/profiler/conf/road_network/concurrent_road_config.yml
@@ -1,13 +1,14 @@
 graphName: "road_network"
 schema: "road_network.gql"
-queries: "queries.yml"
 
 scales:
   - 400
 
 repeatsPerQuery: 5
 
-commitQueries: false
+queries: "queries.yml"
+deleteInsertedConcepts: true
+
 concurrency:
   clients: 1
   uniqueKeyspaces: true
