--- a/profiler/conf/social_network/social_network_config.yml
+++ b/profiler/conf/social_network/social_network_config.yml
@@ -1,13 +1,14 @@
 graphName: "social_network"
 schema: "social_network.gql"
-queries: "queries.yml"
 scales:
   - 400
   - 1000
   - 2000
 repeatsPerQuery: 5
 
-commitQueries: false
+queries: "queries.yml"
+deleteInsertedConcepts: true
+
 concurrency:
   clients: 1
   uniqueKeyspaces: true
