--- a/profiler/test/resources/web_content/web_content_config_test.yml
+++ b/profiler/test/resources/web_content/web_content_config_test.yml
@@ -1,11 +1,12 @@
 graphName: "web_content"
 schema: "web_content_schema.gql"
-queries: "queries.yml"
 scales:
   - 2000
 repeatsPerQuery: 0
 
-commitQueries: false
+queries: "queries.yml"
+deleteInsertedConcepts: true
+
 concurrency:
   clients: 1
   uniqueKeyspaces: false
