--- a/profiler/conf/taxfix/config.yml
+++ b/profiler/conf/taxfix/config.yml
@@ -4,6 +4,7 @@ repeatsPerQuery: 1
 
 queries: "queries.yml"
 deleteInsertedConcepts: false
+traceDeleteInsertedConcepts: false
 
 concurrency:
   clients: 2
