--- a/profiler/test/resources/web_content/web_content_config_test.yml
+++ b/profiler/test/resources/web_content/web_content_config_test.yml
@@ -6,6 +6,7 @@ repeatsPerQuery: 0
 
 queries: "queries.yml"
 deleteInsertedConcepts: true
+traceDeleteInsertedConcepts: false
 
 concurrency:
   clients: 1
