--- a/profiler/conf/road_network/road_config.yml
+++ b/profiler/conf/road_network/road_config.yml
@@ -10,6 +10,7 @@ repeatsPerQuery: 5
 
 queries: "queries.yml"
 deleteInsertedConcepts: true
+traceDeleteInsertedConcepts: false
 
 concurrency:
   clients: 1
