--- a/profiler/conf/taxfix/config.yml
+++ b/profiler/conf/taxfix/config.yml
@@ -2,7 +2,7 @@ graphName: "taxfix"
 schema: "taxfix_schema.gql"
 repeatsPerQuery: 1
 
-queries: "queries.yml"
+queries: "queries_read.yml"
 deleteInsertedConcepts: false
 traceDeleteInsertedConcepts: false
 
