Working on data generator for generic uniform schema - gave up on Age weighted concept provider

--- a/profiler/conf/generic/config_read.yml
+++ b/profiler/conf/generic/config_read.yml
@@ -1,12 +1,13 @@
-graphName: "generic_network"
+graphName: "generic_uniform_network"
 schema: "schema.gql"
 scales:
   - 1000
-#  - 4000
-#  - 6000
-#  - 8000
-
-repeatsPerQuery: 3
+  - 4000
+  - 6000
+  - 8000
+  - 10000
+  - 12000
+repeatsPerQuery: 0
 
 queries: "queries_complex_read.yml"
 deleteInsertedConcepts: true
