--- a/profiler/conf/financial_transactions/queries_write.yml
+++ b/profiler/conf/financial_transactions/queries_write.yml
@@ -1,5 +1,26 @@
 queries:
-  # NOTE: all pure insert queries must provide variables for each inserted concept or they won't be deleted
+  # --- single vertex or 1 hop write queries ---
+  # insert 1 concept
   - "insert $x isa trader;"
-  - "insert $x isa quantity; $x -100;" # create an attribute that isn't in the data generator range
-  - "insert $r (transactor: $trader1, transactor: $trader2); $trader1 isa trader; $trader2 is trader;"
+  # insert 1 concept
+  - "insert $x isa quantity; $x -100;"
+  # insert 1 concept
+  - "insert $x isa name; $x \"helloworld\";"
+  # insert 3 concepts
+  - "insert
+          $r (transactor: $trader1, transactor: $trader2) isa transaction;
+          $trader1 isa trader;
+          $trader2 isa trader;"
+
+  # --- few-hop write queries ---
+
+  # insert 12 concepts
+  - "insert
+      $r (transactor: $trader1, transactor: $trader2, transactor: $trader3) isa transaction, has quantity $q;
+      $q -1000;
+      $trader1 isa trader, has name $n1; $n1 \"John\";
+      $trader2 isa trader, has name $n2; $n2 \"Bill\";
+      $trader3 isa trader, has name $n3; $n3 \"Mary\";
+      $r2 (transactor: $trader1, transactor: $trader4) isa transaction, has quantity $q2;
+      $q2 -2000;
+      $trader4 isa trader, has name $n4; $n4 \"Alice\";"
