--- a/profiler/test/resources/web_content/web_content_config_test.yml
+++ b/profiler/test/resources/web_content/web_content_config_test.yml
@@ -1,4 +1,6 @@
-graphName: "web_content"
+name: ""
+description: ""
+dataGenerator: "web_content"
 schema: "web_content_schema.gql"
 scales:
   - 2000
