--- a/profiler/conf/financial_transactions/financial_config_read.yml
+++ b/profiler/conf/financial_transactions/financial_config_read.yml
@@ -1,4 +1,6 @@
-graphName: "financial"
+name: "Financial Transaction Network - Read"
+description: "Simple financial network with: Constant C_in, Increasing R_out, and Increasing A_out"
+dataGenerator: "financial"
 schema: "financial.gql"
 scales:
   - 2000
