--- a/profiler/conf/generic/config_write.yml
+++ b/profiler/conf/generic/config_write.yml
@@ -1,4 +1,6 @@
-graphName: "generic_uniform_network"
+name: "Complex Graph - Write"
+description: "Complex graph writes with: Constant C_in, Constant R_out, Constant A_out"
+dataGenerator: "generic_uniform_network"
 schema: "schema.gql"
 scales:
   - 2000
