--- a/profiler/conf/road_network/road_config_write.yml
+++ b/profiler/conf/road_network/road_config_write.yml
@@ -1,4 +1,6 @@
-graphName: "road_network"
+name: "Road Network - Write"
+description: "Road network writes with: Constant C_in, Constant R_out, Constant A_out"
+dataGenerator: "road_network"
 schema: "road_network.gql"
 scales:
 - 2000
