--- a/profiler/conf/generic/queries_complex_read.yml
+++ b/profiler/conf/generic/queries_complex_read.yml
@@ -43,14 +43,17 @@ queries:
       $c2 isa circle;
       $s1 isa square;
       $s2 isa square;
-      ($b, $c1) isa relation;
-      ($c1, $s1) isa relation;
+      (owned: $b, owner: $c1) isa ownership;
+      (bigger: $c1, smaller: $s1) isa sizing;
       ($s1, $c2) isa relation;
-      ($c2, $s2) isa relation;
-      ($c2, $b) isa relation;
+      ($c2, $s2) isa interaction;
+      ($c2, $b) isa ;
       get;limit 5;"
 
   # highly connected square - edges, diagonals, ternary relation and quaternary relations
+  # It may be interesting to keep the ternary relations as unspecific types to see if we
+  # can prune search space using histograms of connectivity (eg. the only relations with more than 2
+  # role players are actually interactions!). Meanwhile many relations have two RPs so we don't gain any information
   - "match
       $b1 isa blob;
       $b2 isa blob;
@@ -61,7 +64,7 @@ queries:
       ($c, $s) isa ownership;
       ($s, $b1) isa interaction;
       ($b1, $c) isa relation;
-      ($b2, $s) isa relation;
+      (bigger: $b2, smaller: $s) isa sizing;
       ($b1, $b2, $c) isa relation;
       ($b1, $b2, $s) isa relation;
       ($b2, $c, $s) isa relation;
