--- a/common/configuration/BUILD
+++ b/common/configuration/BUILD
@@ -1,13 +1,6 @@
 java_library(
     name = "benchmark-configuration",
-#    srcs = glob(["*.java"]),
-    srcs = [
-        "BenchmarkConfigurationFile.java",
-        "BenchmarkConfiguration.java",
-        "BenchmarkArguments.java",
-        "ConfigurationException.java",
-        "QueriesConfigurationFile.java"
-    ],
+    srcs = glob(["*.java"]),
     deps = [
         "//dependencies/maven/artifacts/com/fasterxml/jackson/core:jackson-core",
         "//dependencies/maven/artifacts/com/fasterxml/jackson/core:jackson-databind",
