--- a/report/BUILD
+++ b/report/BUILD
@@ -5,11 +5,19 @@ java_library(
         "//generator:data-generator",
         "//common/configuration:benchmark-configuration",
         "//common/exception:benchmark-exception",
+
         "@graknlabs_client_java//:client-java",
         "@graknlabs_grakn_core//api:api",
+        "@graknlabs_graql//java:graql",
+        "@graknlabs_grakn_core//concept:concept",
+
+        "//dependencies/maven/artifacts/org/apache/ignite:ignite-core",
 
         "//dependencies/maven/artifacts/commons-cli",
         "//dependencies/maven/artifacts/org/slf4j:slf4j-api",
+
+        "//dependencies/maven/artifacts/com/fasterxml/jackson/core:jackson-core",
+        "//dependencies/maven/artifacts/com/fasterxml/jackson/core:jackson-databind",
     ],
     visibility = ["//visibility:public"]
 )
