Refactor lib build file

--- a/profiler/src/BUILD
+++ b/profiler/src/BUILD
@@ -26,9 +26,8 @@ java_library(
         "@graknlabs_graql//java:graql",
         "@graknlabs_grakn_core//concept:concept",
 
-        "//lib:lib",
-
-        # TODO should this be via grakn-core's deps?
+        # together these can be used to create clients with tracing enabled
+        "//lib:client-instrumentation",
         "//dependencies/maven/artifacts/io/grpc:grpc-core",
 
         "//dependencies/maven/artifacts/com/fasterxml/jackson/core:jackson-core",
@@ -46,7 +45,8 @@ java_library(
 
         "//dependencies/maven/artifacts/org/apache/ignite:ignite-core",
 
-        "//profiler/src/generator:data-generator"
+        "//profiler/src/generator:data-generator",
+        "//profiler/src/analysis:insert-query-analyser"
     ],
     runtime_deps = [
         "//dependencies/maven/artifacts/io/grpc:grpc-netty-shaded",
