--- a/common/conf/BUILD
+++ b/common/conf/BUILD
@@ -1,3 +1,22 @@
+#
+#  GRAKN.AI - THE KNOWLEDGE GRAPH
+#  Copyright (C) 2019 Grakn Labs Ltd
+#
+#  This program is free software: you can redistribute it and/or modify
+#  it under the terms of the GNU Affero General Public License as
+#  published by the Free Software Foundation, either version 3 of the
+#  License, or (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU Affero General Public License for more details.
+#
+#  You should have received a copy of the GNU Affero General Public License
+#  along with this program.  If not, see <https://www.gnu.org/licenses/>.
+#
+
+# ----- For writing a distribution ZIP -----
 filegroup(name="biochemical-conf", srcs=["biochemical_network/biochemical_config_read.yml"], visibility = ["//visibility:public"])
 filegroup(name="biochemical-queries", srcs=["biochemical_network/queries_read.yml"], visibility = ["//visibility:public"])
 filegroup(name="biochemical-schema", srcs=["biochemical_network/biochemical_network.gql"], visibility = ["//visibility:public"])
@@ -21,62 +40,3 @@ filegroup(name="complex-conf-write", srcs=["complex/config_write.yml"], visibili
 filegroup(name="complex-queries-read", srcs=["complex/queries_complex_read.yml"], visibility = ["//visibility:public"])
 filegroup(name="complex-queries-write", srcs=["complex/queries_complex_write.yml"], visibility = ["//visibility:public"])
 filegroup(name="complex-schema", srcs=["complex/schema.gql"], visibility = ["//visibility:public"])
-
-
-# ---- shortcut filegroups ----
-
-
-filegroup(
-    name = "biochemical-network",
-    srcs = [
-            "biochemical_network/biochemical_config_read.yml",
-            "biochemical_network/biochemical_network.gql",
-            "biochemical_network/queries_read.yml",
-        ]
-        , visibility = ["//visibility:public"]
-)
-
-filegroup(
-    name = "financial-transactions",
-    srcs = [
-            "financial_transactions/financial_config_read.yml",
-            "financial_transactions/financial.gql",
-            "financial_transactions/queries_read.yml"
-        ],
-    visibility = ["//visibility:public"]
-)
-
-filegroup(
-    name = "road-network",
-    srcs = [
-            "road_network/road_config_read.yml",
-            "road_network/road_config_write.yml",
-            "road_network/queries_read.yml",
-            "road_network/queries_write.yml",
-            "road_network/road_network.gql"
-        ],
-    visibility = ["//visibility:public"]
-)
-
-filegroup(
-    name = "social-network",
-    srcs = [
-            "social_network/social_network_config_read.yml",
-            "social_network/queries_read.yml",
-            "social_network/social_network.gql"
-        ],
-    visibility = ["//visibility:public"]
-)
-
-filegroup(
-    name = "complex-network",
-    srcs = [
-            "complex/config_read.yml",
-            "complex/config_write.yml",
-            "complex/queries_complex_read.yml",
-            "complex/queries_complex_write.yml",
-            "complex/schema.gql"
-        ],
-    visibility = ["//visibility:public"]
-)
-
