remove & in nohup

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
       - bazel:
           command: bazel build @graknlabs_grakn_core//:assemble-linux-targz
       - run: mkdir dist && tar -xvzf bazel-genfiles/external/graknlabs_grakn_core/grakn-core-all-linux.tar.gz -C ./dist/
-      - run: nohup ./dist/grakn-core-all-linux/grakn server start &
+      - run: nohup ./dist/grakn-core-all-linux/grakn server start
       - run: bazel test //profiler/test:profiler-bootup-test-integration --test_output=streamed
 
 workflows:
