update schema and paths

--- a/common/configuration/test/resources/BUILD
+++ b/common/configuration/test/resources/BUILD
@@ -10,8 +10,8 @@ filegroup(
             "web_content/web_content_config_data_gen.yml",
             "web_content/queries_read.yml",
             "web_content/web_content_schema.gql",
-            "web_content/web_content_data_graph.gql",
-            "web_content/web_content_config_data_import.yml"
+            "web_content/web_content_config_data_import.yml",
+            "web_content/web_content_data.gql",
         ],
     visibility = ["//visibility:public"]
 )
