--- a/generator/test/provider/BUILD
+++ b/generator/test/provider/BUILD
@@ -1,6 +1,6 @@
 java_test(
     name = "central-stream-provider-test",
-    test_class = "grakn.benchmark.generator.provider.concept.CentralConceptProviderTest",
+    test_class = "grakn.benchmark.generator.provider.key.CentralConceptProviderTest",
     srcs = ["CentralConceptProviderTest.java"],
     deps = [
         "@graknlabs_grakn_core//concept:concept",
@@ -11,7 +11,7 @@ java_test(
 
 java_test(
     name = "conceptid-storage-provider-test",
-    test_class = "grakn.benchmark.generator.provider.concept.ConceptKeyStorageProviderTest",
+    test_class = "grakn.benchmark.generator.provider.key.ConceptKeyStorageProviderTest",
     srcs = ["ConceptKeyStorageProviderTest.java"],
     deps = [
         "@graknlabs_grakn_core//concept:concept",
@@ -22,7 +22,7 @@ java_test(
 
 java_test(
      name = "not-in-relationship-conceptid-storage-provider-test",
-     test_class = "grakn.benchmark.generator.provider.concept.NotInRelationshipConceptKeyProviderTest",
+     test_class = "grakn.benchmark.generator.provider.key.NotInRelationshipConceptKeyProviderTest",
      srcs = ["NotInRelationshipConceptKeyProviderTest.java"],
      deps = [
         "@graknlabs_grakn_core//concept:concept",
